--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/AppTheme">
         <service
             android:name="PlayService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleInstance"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
