--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
+        <provider android:name="com.example.elisarajaniemi.podcastapp.DataProvider" android:authorities="example.elisarajaniemi.podcastapp.data">
+        </provider>
     </application>
 
 </manifest>
